<resources>
    <!-- APP STRINGS -->
    <string name="app_name">Time2Work</string>
    <string name="button_submit">Submit</string>
    <string name="button_reset">Clear all</string>

    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- DATABASE STRINGS -->
    <string name="event_db_name">EventsTest.db</string>
    <string name="events_db_table_name">Events_Table</string>
    <string name="events_db_id_column_name">_id</string>
    <string name="events_db_date_column_name">date</string>
    <string name="events_db_start_time_column_name">start_time</string>
    <string name="events_db_end_time_column_name">end_time</string>
    <string name="events_db_comments_column_name">comments</string>
    <string name="events_db_total_hours_column_name">total_hours</string>
    <string name="events_db_total_mins_column_name">total_mins</string>

    <!-- PAGE NAMES -->
    <string name="page_title_display">Display your hours</string>
    <string name="page_title_display_hours">Your hours</string>
    <string name="page_title_enter_details">Your Details</string>
    <string name="page_title_main_menu">Welcome</string>
    <string name="page_title_input_screen">Input your hours</string>

    <!-- FRAGMENTS STRINGS -->
    <string name="fragment_page_name_list">Hours for this month</string>
    <string name="fragment_page_name_total">Total for this month</string>

    <!-- NAV BAR STRINGS -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TOAST STRINGS -->
    <string name="toast_details_submitted">Details have been submitted</string>
    <string name="toast_details_reset">Details have been reset</string>
    <string name="toast_delete_sucess">Item has been deleted</string>
    <string name="toast_delete_failure">Item could not be deleted</string>
    <string name="toast_details_updated">Details have been updated</string>
    <string name="toast_db_error">A db error has occurred</string>
    <string name="toast_error">An error has occurred</string>

    <!-- MAIN MENU STRINGS -->
    <string name="main_menu_title1">What is Time2Work?</string>
    <string name="main_menu_paragraph1">
        Time2Work is a timekeeping app created by Daniel Tilley.
        It allows its users to keep track of their hours when working part time.
    </string>
    <string name="main_menu_title2">How does it work?</string>
    <string name="main_menu_paragraph2">
        Time2Work uses a local database on your phone to store all of your entries.
        There are different options within the app that will allow you to do things like
        Add new entries, Update and Delete existing entries as well as see a breakdown
        of how much you have worked. You can also change your details that you entered at
        the sign up screen if you entered them wrong. To get started, tap the menu icon on the top
        left of your screen
    </string>

    <!-- SIGN UP FILE STRINGS -->
    <string name="sign_up_first_name">Enter you first name</string>
    <string name="sign_up_last_name">Enter you last name</string>
    <string name="sign_up_business_name">Enter you business name</string>
    <string name="sign_up_hourly_rate">Enter your hourly rate</string>

    <string name="sign_up_first_name_hint">First name</string>
    <string name="sign_up_last_name_hint">Last name</string>
    <string name="sign_up_business_name_hint">Company name</string>
    <string name="sign_up_hourly_rate_hint">10.50</string>
    <string name="sign_up_page_title">Sign Up</string>

    <!-- DETAILS STRINGS -->
    <string name="user_prefs_file">UserPrefsTest4</string>
    <string name="user_prefs_first_name_key">first_name</string>
    <string name="user_prefs_last_name_key">last_name</string>
    <string name="user_prefs_business_name_key">business_name</string>
    <string name="user_prefs_hourly_rate_key">hourly_rate</string>

    <!-- INPUT STRINGS -->
    <string name="input_select_date">Select the date you worked</string>
    <string name="input_start_time">Select the start time</string>
    <string name="input_end_time">Select the end time</string>
    <string name="input_comments">Any comments about the day (Max 50 characters)</string>
    <string name="input_comments_hint">Can be left blank</string>
    <string name="display_header">Pick a month to display hours for</string>

    <!-- UPDATE SCREEN -->
    <string name="update_screen_title">Current Item</string>
    <string name="update_screen_delete_button">Delete Item</string>
    <string name="update_screen_update_button">Update Item</string>
    <string name="update_hours_dialog_title">Delete item</string>
    <string name="update_hours_dialog_message">Are you sure you want to delete this item?</string>

    <!-- DISPLAY HOURS SCREEN -->
    <string name="display_hours_title">Hours for this month</string>
    <string name="event_row_date_text">Date:</string>
    <string name="event_row_start_time_text">Start Time:</string>
    <string name="event_row_end_time_text">End Time:</string>
</resources>
