<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danieltilley.time2work.EnterDetails">

    <TextView
        android:text="@string/sign_up_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_title"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/sign_up_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView_first_name"
        android:layout_below="@+id/sign_up_title"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/sign_up_first_name_hint"
        android:ems="10"
        android:layout_below="@+id/textView_first_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:id="@+id/editText_first_name" />

    <TextView
        android:text="@string/sign_up_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_first_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView_last_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/sign_up_last_name_hint"
        android:ems="10"
        android:layout_below="@+id/textView_last_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:id="@+id/editText_last_name"/>

    <TextView
        android:text="@string/sign_up_business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_last_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView_business_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/sign_up_business_name_hint"
        android:ems="10"
        android:layout_below="@+id/textView_business_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:id="@+id/editText_business_name"/>

    <TextView
        android:text="@string/sign_up_hourly_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_business_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView_hourly_rate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/sign_up_hourly_rate_hint"
        android:ems="10"
        android:layout_below="@+id/textView_hourly_rate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:id="@+id/editText_hourly_rate"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_hourly_rate"
        android:layout_marginTop="20dp"
        android:id="@+id/button_wrapper">

        <Button
            android:text="@string/button_submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit"
            android:onClick="submitDetails"/>

        <Button
            android:text="@string/button_reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/button_reset"
            android:onClick="resetDetails"/>
    </LinearLayout>

</RelativeLayout>
