<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danieltilley.time2work.InputScreen">

    <TextView
        android:id="@+id/input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_below="@+id/input_title"
        android:text="@string/input_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_below="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="date"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/textView_start_time"
        android:layout_below="@+id/editText_date"
        android:text="@string/input_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/editText_start_time"
        android:layout_below="@+id/textView_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="text"
        android:focusable="false"
        android:onClick="setStartTime"/>

    <TextView
        android:id="@+id/textView_end_time"
        android:layout_below="@+id/editText_start_time"
        android:text="@string/input_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/editText_end_time"
        android:layout_below="@+id/textView_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="text"
        android:focusable="false"
        android:onClick="setEndTime"/>

    <TextView
        android:id="@+id/textView_comments"
        android:layout_below="@+id/editText_end_time"
        android:text="@string/input_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/editText_comments"
        android:layout_below="@+id/textView_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/input_comments_hint"
        android:textAlignment="center"
        android:inputType="text"
        android:maxLength="50"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_comments"
        android:layout_marginTop="20dp"
        android:id="@+id/button_wrapper">

        <Button
            android:text="@string/button_submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit"
            android:onClick="submitDetails"/>

        <Button
            android:text="@string/button_reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/button_reset"
            android:onClick="resetDetails"/>
    </LinearLayout>
</RelativeLayout>
