<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.danieltilley.time2work.MainMenu">

        <TextView
            android:id="@+id/main_menu_title1"
            android:text="@string/main_menu_title1"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="55dp"
            android:textColor="@color/colorPrimary"/>


        <TextView
            android:id="@+id/main_menu_paragraph_1"
            android:layout_below="@+id/main_menu_title1"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/main_menu_paragraph1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/main_menu_title2"
            android:layout_below="@id/main_menu_paragraph_1"
            android:text="@string/main_menu_title2"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/main_menu_paragraph_2"
            android:layout_below="@+id/main_menu_title2"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/main_menu_paragraph2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</ScrollView>