<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextView_row_label_date"
        android:text="@string/event_row_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/TextView_row_date_data"
        android:layout_toRightOf="@+id/TextView_row_label_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView_row_label_start_time"
        android:layout_below="@id/TextView_row_label_date"
        android:text="@string/event_row_start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/TextView_row_start_time_data"
        android:layout_below="@id/TextView_row_label_date"
        android:layout_toRightOf="@+id/TextView_row_label_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView_row_label_end_time"
        android:layout_below="@id/TextView_row_label_start_time"
        android:text="@string/event_row_end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/TextView_row_end_time_data"
        android:layout_below="@id/TextView_row_label_start_time"
        android:layout_toRightOf="@+id/TextView_row_label_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>